<resources>
    <string name="app_name">Shake Lamp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnLamp">Shake or press</string>

    <!-- ShareApp strings -->
    <string name="share_app_body">¡Hi!\n\n Try this app, es really useful and genial:\n\n https://play.google.com/store/apps/details?id=com.handysparksoft.shakelamp \n\nCheers!</string>
    <string name="share_app_subject">Try this app, it\'s great!</string>
    <string name="share_app_information">Information</string>
    <string name="share_app_message1">Shake Lamp V</string>
    <string name="share_app_message2">\nYear 2015 - David A\nemail: handysparksoft@gmail.com</string>
    <string name="shake_lamp_msg_error">Error</string>
    <string name="shake_lamp_msg_not_flash_support">Sorry, your device doesn\'t support flash light!</string>
    <string name="share_app_share">Share Shake Lamp with your friends</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_service_activated">Service activated</string>
    <string name="pref_service_activated_description">Service activated</string>
    <string name="pref_service_activated_on">Service activated. Always running</string>
    <string name="pref_service_activated_off">Service deactivated. Only running if the app is active</string>

    <string name="pref_battery_care">Battery saver</string>
    <string name="pref_battery_care_description_on">Battery saver enabled. Only check for shakes when screen is ON</string>
    <string name="pref_battery_care_description_off">Battery saver disabled. Always checking for shakes even when screen is OFF</string>

    <string name="pref_always_listen">Always checking for shakes</string>
    <string name="pref_always_listen_description">Always check for shakes even when screen is OFF</string>

    <string name="pref_light_auto_off">Turn off light after</string>

    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_description">Vibrate when light comes ON or OFF</string>

    <string name="pref_sensibility">Sensitivity</string>
    <string name="pref_sensibility_description">Adjust shake sensitivity</string>

    <!-- List titles/values  light_auto_off -->
    <string-array name="pref_light_auto_off_titles">
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_light_auto_off_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>0</item>
    </string-array>

    <!-- List titles/values  light_auto_off -->
    <string-array name="pref_sensibility_titles">
        <item>Very low</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="pref_sensibility_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- User -->
    <string name="pref_header_user">Configuration</string>

    <!-- About -->
    <string name="pref_header_about">About</string>

    <string name="pref_about_show">About...</string>
    <string name="pref_about_share">Share...</string>
    <string name="shakeSecondsMsg">Shake the device for 2 seconds to light on or light off!\n\nYou can also press the power button three or four times</string>
    <string name="bannerClickHide">Click to hide banner</string>

    <string name="notificationTitle">Flashlight is ON</string>
    <string name="notificationText">Shake again or press here to turn off the flashlight</string>

    <!--Real banners (shakeLampBanner)
     -->
    <string name="banner_ad_unit_id">ca-app-pub-8877880174338104/1751062478</string>
    <string name="msgBtnVote">Vote</string>


    <!-- Test banner
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    -->


</resources>
