<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <SwitchPreference
        android:defaultValue="true"
        android:disableDependentsState="true"
        android:key="pref_battery_care"
        android:summary="@string/pref_battery_care_description_on"
        android:title="@string/pref_battery_care"/>
    -->

    <CheckBoxPreference
        android:defaultValue="true"
        android:disableDependentsState="true"
        android:key="pref_battery_care"
        android:summary="@string/pref_battery_care_description_on"
        android:title="@string/pref_battery_care"/>

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_sensibility_titles"
        android:entryValues="@array/pref_sensibility_values"
        android:key="pref_sensibility"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_sensibility" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_light_auto_off_titles"
        android:entryValues="@array/pref_light_auto_off_values"
        android:key="pref_max_time_light_on"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"

        android:title="@string/pref_light_auto_off" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_vibrate"
        android:summary="@string/pref_vibrate_description"
        android:title="@string/pref_vibrate" />




    <!-- A 'parent' preference, which enables/disables child preferences (below)
    <SwitchPreference
        android:key="pref_vibrate"
        android:title="@string/pref_vibrate"
        android:summary="@string/pref_vibrate_description"
        android:defaultValue="true" />

         when checked/unchecked. -->





</PreferenceScreen>
